# ZilKit

./: .gitignore  GITHUB_SETUP.md  INSTALL_GUIDE.md  LICENSE  PROJECT_PLAN.md  QUICK_START.md  README.md  STRUCTURE.md  TESTING_GUIDE.md  install.bat  pyproject.toml  requirements.txt  test_ffmpeg_menu.py  uninstall.bat
docs/: architecture.md  development.md  installation.md
examples/: test_config_demo.py  test_ffmpeg_ops.py  test_ffmpeg_simple.py  test_file_utils_demo.py  test_logger_demo.py
ref/ContextMenus/: 1add_jjs-mediacraft_shortcut.reg  2add_ffmpeg_shortcuts.reg
ref/Encoding/: encoding_profiles.py
src/scripts/: cleanup_registry.py  deep_diagnose.py  diagnose_registry.py  install.py  install_via_reg.py  uninstall.py  uninstall_via_reg.py  verify_registry.py
src/scripts/reg_files/: 0_cleanup_all.reg  1_zilkit_root.reg  2_zilkit_submenus.reg  3_zilkit_remove.reg  alt_cleanup.reg  alt_install.reg  test1_root.reg  test2_ffmpeg.reg  test3_shortcuts.reg  test4_utilities.reg  test_cleanup.reg
src/zilkit/: __init__.py  config.py  main.py  presets.json  registry.py  registry_generator.py
src/zilkit/core/: __init__.py  ffmpeg_ops.py
src/zilkit/menu/: __init__.py  ffmpeg.py  shortcuts.py  utilities.py
src/zilkit/utils/: __init__.py  file_utils.py  logger.py
tests/: __init__.py  test_config.py  test_file_utils.py  test_logger.py
